...
    tools:context=".AddItemsActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@+id/add_items_to_inventory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_expiry_date"
        app:layout_constraintVertical_bias="0.89">

        <LinearLayout
            android:id="@+id/inventory_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/back_arrow_dark_40" />

    <EditText
        android:id="@+id/item_name"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:autofillHints="@string/enter_item_hint"
        android:hint="@string/enter_item"
        android:inputType="text|textNoSuggestions"
        android:textColor="@color/dark_blue"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <Button
        android:id="@+id/add_item_to_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_blue"
        android:backgroundTintMode="src_over"
        android:text="@string/add_item_to_list"
        android:textColor="@color/faded_white"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <EditText
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/dark_blue"
        android:id="@+id/item_quantity"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:autofillHints="@string/enter_quantity_hint"
        android:ems="10"
        android:hint="@string/enter_quantity"
        android:inputType="number"
...
